Settings view implemeted
Users can now change their preferences in the settings window

--- a/Futoshiki/src/view/SettingsScreen.form
+++ b/Futoshiki/src/view/SettingsScreen.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="SettingsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="428"/>
+      <xy x="20" y="20" width="600" height="428"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="bac00" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bac00" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -18,10 +18,10 @@
         <children>
           <component id="bfd2f" class="javax.swing.JButton" binding="returnToPreviousMenuButton" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Return to previous menu"/>
+              <text value="Previous menu"/>
             </properties>
           </component>
           <component id="74a5a" class="javax.swing.JButton" binding="saveChangesButton" default-binding="true">
@@ -30,6 +30,14 @@
             </constraints>
             <properties>
               <text value="Save changes"/>
+            </properties>
+          </component>
+          <component id="23c1f" class="javax.swing.JButton" binding="defaultButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Default"/>
             </properties>
           </component>
         </children>
@@ -42,7 +50,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="3fb1c" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3fb1c" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -82,9 +90,17 @@
                   <text value="Time"/>
                 </properties>
               </component>
+              <component id="178c0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Button side"/>
+                </properties>
+              </component>
             </children>
           </grid>
-          <grid id="1d7f6" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="1d7f6" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -97,7 +113,16 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <model/>
+                  <model>
+                    <item value="3 by 3"/>
+                    <item value="4 by 4"/>
+                    <item value="5 by 5"/>
+                    <item value="6 by 6"/>
+                    <item value="7 by 7"/>
+                    <item value="8 by 8"/>
+                    <item value="9 by 9"/>
+                    <item value="10 by 10"/>
+                  </model>
                 </properties>
               </component>
               <component id="d0eda" class="javax.swing.JComboBox" binding="difficultyComboBox">
@@ -123,7 +148,7 @@
                   </model>
                 </properties>
               </component>
-              <component id="16b0d" class="javax.swing.JComboBox" binding="stopwatchComboBox">
+              <component id="16b0d" class="javax.swing.JComboBox" binding="timeComboBox">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -132,6 +157,17 @@
                     <item value="Stopwatch"/>
                     <item value="Timer"/>
                     <item value="No"/>
+                  </model>
+                </properties>
+              </component>
+              <component id="7706c" class="javax.swing.JComboBox" binding="sideComboBox">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <model>
+                    <item value="Right"/>
+                    <item value="Left"/>
                   </model>
                 </properties>
               </component>
