Board game update
The values on the cells now uses the templates in the boards.json file, meaning the boards now display as they should as if you were to play

--- a/Futoshiki/src/view/GamePanel.form
+++ b/Futoshiki/src/view/GamePanel.form
@@ -47,6 +47,16 @@
                   <text value="Reset Menu"/>
                 </properties>
               </component>
+              <component id="cf7fe" class="javax.swing.JPopupMenu$Separator">
+                <constraints/>
+                <properties/>
+              </component>
+              <component id="cc384" class="javax.swing.JMenuItem" binding="exitMenuItem">
+                <constraints/>
+                <properties>
+                  <text value="Exit"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="fa97c" class="javax.swing.JMenu" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
@@ -105,12 +115,6 @@
                 <constraints/>
                 <properties>
                   <text value="Help"/>
-                </properties>
-              </component>
-              <component id="cc384" class="javax.swing.JMenuItem" binding="exitMenuItem">
-                <constraints/>
-                <properties>
-                  <text value="Exit"/>
                 </properties>
               </component>
             </children>
