--- a/Futoshiki/src/view/StartScreen.form
+++ b/Futoshiki/src/view/StartScreen.form
@@ -24,7 +24,7 @@
               <text value="Username"/>
             </properties>
           </component>
-          <component id="5ea31" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="5ea31" class="javax.swing.JTextField" binding="usernameField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -50,7 +50,7 @@
               <text value="Password"/>
             </properties>
           </component>
-          <component id="bed3d" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="bed3d" class="javax.swing.JPasswordField" binding="passwordField">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
