--- a/Futoshiki/src/view/AboutUs.form
+++ b/Futoshiki/src/view/AboutUs.form
@@ -3,30 +3,12 @@
   <grid id="27dc6" binding="AboutUsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="697" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="36cd5" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="7fc13" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Here the about us information will be"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="4769e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b5402" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -34,26 +16,50 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="cf35f" class="javax.swing.JButton" binding="returnToMainMenuButton" default-binding="true">
+          <component id="2a6cb" class="javax.swing.JButton" binding="returnToHomeButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Return to home"/>
+            </properties>
+          </component>
+          <component id="2c662" class="javax.swing.JButton" binding="nextPageButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Return to main menu"/>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Next Page"/>
             </properties>
           </component>
-          <hspacer id="3a53">
+          <component id="84d1a" class="javax.swing.JButton" binding="goToTopButton">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
-          <hspacer id="74923">
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Go to top"/>
+            </properties>
+          </component>
+          <component id="d5be6" class="javax.swing.JButton" binding="previousPageButton">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Previous Page"/>
+            </properties>
+          </component>
         </children>
       </grid>
+      <component id="ea2af" class="view.PDFViewerPanel" binding="pdfViewerPanel" custom-create="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
