--- a/Futoshiki/src/view/HelpScreen.form
+++ b/Futoshiki/src/view/HelpScreen.form
@@ -11,22 +11,58 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="68311" class="javax.swing.JButton" binding="returnToHomeButton">
+      <component id="62d2c" class="view.PDFViewerPanel" binding="pdfViewerPanel" custom-create="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Return to home"/>
-        </properties>
+        <properties/>
       </component>
-      <component id="fa87b" class="javax.swing.JLabel">
+      <grid id="eb561" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Here the user manual will be displayed"/>
-        </properties>
-      </component>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="68311" class="javax.swing.JButton" binding="returnToHomeButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Return to home"/>
+            </properties>
+          </component>
+          <component id="1c149" class="javax.swing.JButton" binding="previousPageButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Previous Page"/>
+            </properties>
+          </component>
+          <component id="8248e" class="javax.swing.JButton" binding="nextPageButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Next Page"/>
+            </properties>
+          </component>
+          <component id="1920b" class="javax.swing.JButton" binding="goToTopButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+              <text value="Go to top"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
