--- a/Futoshiki/src/view/TopScreen.form
+++ b/Futoshiki/src/view/TopScreen.form
@@ -21,7 +21,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <font name="Arial" size="20" style="0"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="ee652" class="javax.swing.JLabel">
@@ -29,6 +31,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Hard"/>
                 </properties>
               </component>
@@ -39,6 +42,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="1"/>
                     <item value="2"/>
@@ -68,6 +72,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Easy"/>
                 </properties>
               </component>
@@ -78,6 +83,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="1"/>
                     <item value="2"/>
@@ -107,6 +113,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Intermediate"/>
                 </properties>
               </component>
@@ -117,6 +124,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="1"/>
                     <item value="2"/>
@@ -135,7 +143,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="a8527" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a8527" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -148,10 +156,16 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <text value="Return to previous menu"/>
             </properties>
           </component>
-          <hspacer id="33d8a">
+          <hspacer id="ce167">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <hspacer id="2e5de">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -171,6 +185,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <text value="Matrix size"/>
             </properties>
           </component>
@@ -179,6 +194,7 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <model>
                 <item value="3 by 3"/>
                 <item value="4 by 4"/>
