--- a/Futoshiki/src/view/SettingsScreen.form
+++ b/Futoshiki/src/view/SettingsScreen.form
@@ -21,6 +21,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <text value="Previous menu"/>
             </properties>
           </component>
@@ -29,6 +30,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <text value="Save changes"/>
             </properties>
           </component>
@@ -37,6 +39,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="20" style="0"/>
               <text value="Default"/>
             </properties>
           </component>
@@ -63,6 +66,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Board size"/>
                 </properties>
               </component>
@@ -71,6 +75,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Difficulty"/>
                 </properties>
               </component>
@@ -79,6 +84,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Multilevel"/>
                 </properties>
               </component>
@@ -87,6 +93,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Time"/>
                 </properties>
               </component>
@@ -95,6 +102,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Button side"/>
                 </properties>
               </component>
@@ -113,6 +121,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="3 by 3"/>
                     <item value="4 by 4"/>
@@ -130,6 +139,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="Easy"/>
                     <item value="Intermediate"/>
@@ -142,6 +152,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="false"/>
                     <item value="true"/>
@@ -153,6 +164,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="Stopwatch"/>
                     <item value="Timer"/>
@@ -165,6 +177,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <model>
                     <item value="Right"/>
                     <item value="Left"/>
