--- a/Futoshiki/src/view/HomeScreen.form
+++ b/Futoshiki/src/view/HomeScreen.form
@@ -48,6 +48,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Play Futoshiki!"/>
                 </properties>
               </component>
@@ -76,6 +77,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Settings"/>
                 </properties>
               </component>
@@ -84,6 +86,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Top 10"/>
                 </properties>
               </component>
@@ -92,6 +95,7 @@
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="About us"/>
                 </properties>
               </component>
@@ -100,6 +104,7 @@
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial" size="20" style="0"/>
                   <text value="Help"/>
                 </properties>
               </component>
