--- a/Futoshiki/src/view/NewUser.form
+++ b/Futoshiki/src/view/NewUser.form
@@ -21,6 +21,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="18" style="0"/>
               <text value="Return to log in"/>
             </properties>
           </component>
@@ -29,6 +30,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="18" style="0"/>
               <text value="Create new user"/>
             </properties>
           </component>
@@ -47,6 +49,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="18" style="0"/>
               <text value="Username"/>
             </properties>
           </component>
@@ -56,13 +59,16 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+            </properties>
           </component>
           <component id="384cc" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Arial" size="18" style="0"/>
               <text value="Password"/>
             </properties>
           </component>
@@ -72,7 +78,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <font name="Arial" size="18" style="0"/>
+            </properties>
           </component>
         </children>
       </grid>
